Fix post content overflow

--- a/sass/posts.scss
+++ b/sass/posts.scss
@@ -22,6 +22,7 @@
     font-weight: 600;
     font-size: x-large;
     overflow-y: auto;
+    min-height: 35px;
   }
 
   .post-author-date {
@@ -31,6 +32,7 @@
   .post-message {
     font-size: large;
     overflow-y: auto;
+    min-height: 75px;
   }
 
   form {
